public/css/style.css
body {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.text-primary {
    color: #f76fd5 !important;
}

.social-media {
    float: right;
    margin-bottom: 0px;
}

.social-media li {
    display: inline-block;
}

a {
    color: #fa94e0;
    text-decoration: none;
    background-color: transparent;
    transition: 0.3s all ease;
}

a:hover {
    color: #f81ac1;
    text-decoration: none;
}

#navbarNav a {
    font-size: 18px;
    padding: 5px 20px;
}

#navbarNav a:hover {
    color: #f81ac1;
}

.navbar {
    padding: 0.75rem 1rem;
}

.navbar.sticky {
    padding: 0.1rem 1rem;
}

.sticky {
    background-color: white;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    -webkit-transition: 0.3s all ease;
    -moz-transition: 0.3s all ease;
    -o-transition: 0.3 all ease;
    transition: 0.3s all ease;
    transition: 0.3s all ease;
    z-index: 1000;
    margin-bottom: 10px;
}
.sticky img {
    height: 55px;
}

.navbar-light .navbar-toggler {
    color: #f81ac1;
    border-color: #f81ac1;
    border-width: 2px;
}
.site-blocks-cover {
    background-image: url(../images/hero31.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 600px;
    height: calc(83vh);
}

.bg-primary {
    background-color: #f76fd5 !important;
}

.navbar-expand-lg .navbar-collapse {
    justify-content: center;
}

.section {
    padding: 177px 0 80px 0;
}

.section h1{
    padding-bottom: 2%;
}

#about-us p{
    line-height: 1.8;
}

#about-text {
    line-height: 1.9;
    font-size: 1.2em;
}

.card {
    border:none;
}

.card-text {
    line-height: 1.7;
    font-size: 18px;
}

.ul-check li {
    position: relative;
    padding-left: 35px;
    margin-bottom: 15px;
    line-height: 1.5;
}
.ul-check li:before {
    left: 0;
    font-size: 20px;
    top: -0.3rem;
    font-family: "icomoon";
    content: "\e5ca";
    position: absolute;
}

.ul-check.primary li:before {
    color: #f196ea;
}

.empower {
    background-image: url(../images/empower_women.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 600px;
    height: calc(83vh);
}

.empower-title {
    font-size: 60px;
    color: #d3cdd3;
    padding-bottom: 30px;
}

.empower-text {
    font-size: 36px;
    color: #f5edf5;
}

footer h4 {
    color: #b5aeb5;
}

.icon-heart {
    color: #f76fd5;
}

@media screen and (max-width: 992px) {
    .social-media {
        margin-right: 20px;
        float: none;
    }

    #home-section {
        text-align: center;

    }

    .site-blocks-cover {
        background-image: url(../images/heroSmall.jpg);
    }

    footer {
        text-align: center;
    }

    #about-us {
        padding: 7% 8%;
    }

    #icon-hide1,#icon-hide2,#icon-hide3,#icon-hide4 {
        display: none;
    }






}

